--- a/06-WebContentStructure/countries.html
+++ b/06-WebContentStructure/countries.html
@@ -1,30 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interesting Data Table</title>
-</head>
-<body>
+  </head>
+  <body>
     <table border="1">
-        <tr>
-            <th>Country</th>
-            <th>Capital City</th>
-            <th>Population (millions)</th>
-            <th>Currency</th>
-        </tr>
-        <tr>
-            <td>Japan</td>
-            <td>Tokyo</td>
-            <td>37.4</td>
-            <td>Yen (JPY)</td>
-        </tr>
-        <tr>
-            <td>Brazil</td>
-            <td>Brasília</td>
-            <td>3.1</td>
-            <td>Real (BRL)</td>
-        </tr>
+      <tr>
+        <th>Country</th>
+        <th>Capital City</th>
+        <th>Population (millions)</th>
+        <th>Currency</th>
+      </tr>
+      <tr>
+        <td>Japan</td>
+        <td>Tokyo</td>
+        <td>37.4</td>
+        <td>Yen (JPY)</td>
+      </tr>
+      <tr>
+        <td>Brazil</td>
+        <td>Brasília</td>
+        <td>3.1</td>
+        <td>Real (BRL)</td>
+      </tr>
+      <tr>
+        <td>Poland</td>
+        <td>Warsaw</td>
+        <td>36.69</td>
+        <td>Zloty (PLN)</td>
+      </tr>
+      <tr>
+        <td>Ukraine</td>
+        <td>Kyiv</td>
+        <td>37</td>
+        <td>Hryvnia (UAH)</td>
+      </tr>
     </table>
-</body>
+  </body>
 </html>
