Every task completed

--- a/07-WebContentFormatting/krakow.html
+++ b/07-WebContentFormatting/krakow.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="krakow.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historical Landmarks in Krakow</title>
@@ -14,10 +15,10 @@
     <table border="1">
         <thead>
             <tr>
-                <th>Landmark</th>
-                <th>Year of Construction</th>
+                <th style="width: 25%;">Landmark</th>
+                <th style="width: 10%;">Year of Construction</th>
                 <th>Architectural Style</th>
-                <th>Significance</th>
+                <th style="width: 40%;">Significance</th>
             </tr>
         </thead>
         <tbody>
