--- a/07-WebContentFormatting/transport.html
+++ b/07-WebContentFormatting/transport.html
@@ -2,61 +2,10 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="transport.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Transport of the Future</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
-            color: #333;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0 20px;
-        }
-
-        h1,
-        h2 {
-            color: #1e90ff;
-        }
-
-        h1 {
-            text-align: center;
-            padding: 20px 0;
-            border-bottom: 2px solid #4682b4;
-        }
-
-        h2 {
-            margin-top: 30px;
-        }
-
-        p {
-            margin: 10px 0;
-        }
-
-        ul {
-            margin: 20px 0;
-            padding-left: 20px;
-        }
-
-        li {
-            margin-bottom: 10px;
-        }
-
-        .highlight {
-            background-color: #e6f7ff;
-            padding: 10px;
-            border-left: 4px solid #1e90ff;
-        }
-
-        footer {
-            text-align: center;
-            margin-top: 50px;
-            padding: 10px 0;
-            background-color: #1e90ff;
-            color: white;
-        }
-    </style>
 </head>
 
 <body>
